<resources>
    <string name="app_name">つやまっぷ</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_section_position">"津山の場所"</string>
    <string name="menu_section_gallery">"津山の風景"</string>

    <string name="menu_shiyakusho">市役所</string>
    <string name="menu_primaryschool">小学校</string>
    <string name="menu_juniorhighschool">中学校</string>
    <string name="menu_publicfacilities">公民館等集会施設</string>
    <string name="menu_libraries">市立図書館</string>
    <string name="menu_culturecenter">文化センター等</string>
    <string name="menu_hoikuen">保育園保育所</string>
    <string name="menu_youchien">幼稚園</string>
    <string name="menu_jidoukan">児童館</string>
    <string name="menu_haikibutsu">廃棄物処理施設</string>
    <string name="menu_aed_install">AED設置場所</string>
    <string name="menu_HP">津山市ホームページ</string>

    <string name="url_csv_shiyakushoichi">"https://www.city.tsuyama.lg.jp/common/photo/free/files/8647/tsuyamashi_shiyakushoichi_2016.11.CSV"</string>
    <string name="url_csv_shougakkouichi">"https://www.city.tsuyama.lg.jp/common/photo/free/files/8647/tsuyamashi_shougakkouichi_2016.11.CSV"</string>
    <string name="url_csv_juniorhighschool">"https://www.city.tsuyama.lg.jp/common/photo/free/files/8647/tsuyamashi_chugakkouichi_2016.11.CSV"</string>
    <string name="url_csv_publicfacilities">"https://www.city.tsuyama.lg.jp/common/photo/free/files/8647/tsuyamashi_kouminkanichi_2016.11.CSV"</string>
    <string name="url_csv_haikibutsu_syori">"http://www.okayama-opendata.jp/ckan/dataset/e18d609b-812a-4326-bbd5-b845a9c19483/resource/e08f630e-ba55-4c00-bc20-8f1a0fb369c7/download/tsuyamashihaikibutsushorishisetsu.csv"</string>
    <string name="url_csv_aed_install">"http://www.okayama-opendata.jp/ckan/dataset/057117ba-a22d-41b1-bf47-eb6c68d8ea26/resource/5da4e1f7-278d-4325-8d11-58035f64a290/download/tsuyamashiaed.csv"</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">"場所"</string>

    <string name="tsuyama_city_hp">https://www.city.tsuyama.lg.jp/top.php</string>

    <string name="google_map">"GoogleMap"</string>

    <string name="welcome_to_tsuyamap">"Welcome To つやまっぷ!"</string>
    <string name="entrance_description">"つやまっぷは岡山県津山市のオープンデータを使用したアプリです。\n津山市の場所と美しい風景をお楽しみください。"</string>

    <!--<string name=""></string>-->
    <string name="nav_button_map">"津山の場所"</string>
    <string name="nav_button_gallery">"津山の風景"</string>
    <string name="nav_button_setting">"設定"</string>
    <string name="title_activity_settings">"設定"</string>

    <string name="message_request_location">"現在地をマップに表示するにはリクエストを許可してください"</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">"場所の表示/非表示"</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">"ダウンロード"</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">"風景の表示/非表示"</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_download">ダウンロード</string>
    <string name="message_recommend_wifi">"Wi-Fi接続でのダウンロードをおすすめします。(約40MB)\n このままダウンロードしますか?"</string>
    <string name="message_dwonload_json">場所データを再ダウンロードしますか？</string>
    <string name="message_dwonload_image">風景写真を再ダウンロードしますか？</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_json_download">場所データを再ダウンロード</string>
    <string name="title_image_download">風景写真を再ダウンロード</string>

    <string name="pref_header_about_opend_data">"津山市オープンデータ"</string>
    <string name="pref_header_summary_opend_data">"津山市オープンデータへのリンクです"</string>
    <string name="url_open_data">"https://www.city.tsuyama.lg.jp/life/index2.php?id=5530"</string>

    <string name="header_terms_of_use">"利用規約"</string>

    <string name="btn_intro_next">"次へ"</string>
    <string name="btn_intro_back">戻る</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chk_terms_of_use">理解</string>
    <string name="title_now_download">ダウンロード中</string>
    <string name="message_pleasewait">お待ちください</string>
    <string name="message_complete">完了しました</string>
    <string name="message_no_network">ネットワーク接続を確認してください。</string>
    <string name="message_error_network">ダウンロード中にエラーが発生しました。お手数ですがネットワーク接続を確認してください。</string>

</resources>
