<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="位置情報">
            <menu>
                <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_shiyakusho" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_primaryschool" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_juniorhighschool" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_publicfacilities" />
                <item
                    android:id="@+id/nav_haikibutsu"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_haikibutsu" />
                <item
                    android:id="@+id/nav_AED_install_place"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_aed_install" />
            </menu>
        </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_hp"
                android:icon="@drawable/ic_location_city_black_24dp"
                android:title="@string/menu_HP" />
        </menu>
    </item>

</menu>
