<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency" />-->
    <com.higekick.opentsuyama.DownloadPreference
        android:icon="@drawable/ic_map_teal_500_24dp"
        android:title="@string/title_json_download"
        android:dialogTitle="@string/title_download"
        android:dialogMessage="@string/message_dwonload_json"
        android:key="@string/title_json_download"
        />

    <com.higekick.opentsuyama.DownloadPreference
        android:icon="@drawable/ic_photo_blue_300_24dp"
        android:title="@string/title_image_download"
        android:dialogTitle="@string/title_download"
        android:dialogMessage="@string/message_dwonload_image"
        android:key="@string/title_image_download"
        />

    <!--android:positiveButtonText="@string/ok"-->
    <!--android:negativeButtonText="@string/cancel"-->
</PreferenceScreen>
