<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TermsOfUseFragment">

    <ImageView
        android:id="@+id/imageView"
        android:alpha="0.3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chk_termsOfUse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tsuyama_logo_white_cut" />

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_terms_of_use"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/chk_termsOfUse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <CheckBox
        android:id="@+id/chk_termsOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_terms_of_use"
        app:layout_constraintTop_toBottomOf="@id/text_terms_of_use"
        app:layout_constraintBottom_toTopOf="@id/btnMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ></CheckBox>

    <Button
        android:visibility="invisible"
        android:id="@+id/btnMap"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@+id/imageView"
        android:background="@drawable/my_button"
        android:drawableLeft="@drawable/ic_map_teal_500_24dp"
        android:text="@string/nav_button_map"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_termsOfUse" />

    <Button
        android:visibility="invisible"
        android:id="@+id/btnGallery"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button"
        android:drawableLeft="@drawable/ic_photo_blue_300_24dp"
        android:text="@string/nav_button_gallery"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMap"
        app:layout_constraintTop_toBottomOf="@+id/chk_termsOfUse"></Button>

</android.support.constraint.ConstraintLayout>